// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsAllowedIPsOverview > renders correctly 1`] = `
<div
  class="d-flex flex-column align-center full-width mt-10"
>
  
  <v-card-stub
    border="false"
    class=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Allowed IPs 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    <tiny-cards-list-stub
      cardbuttons="[object Object],[object Object]"
      class="mx-4"
      flagiconkey=""
      items="[object Object],[object Object]"
      listitemicon=""
      subtitlekeyvaluepairs="[Function]"
      titlefunction="[Function]"
      titletextkey="ipAddress"
      useslot="false"
    />
    <evocon-v-button-stub
      class="ml-4 mt-2"
      color=""
      icon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      iconcolor=""
      text="IP address"
      textclass=""
      type="primary-light"
    />
    <v-card-actions-stub
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        disabled="true"
        icon=""
        iconcolor=""
        loading="false"
        text="Save"
        textclass=""
        type="primary"
      />
    </v-card-actions-stub>
    
    
  </v-card-stub>
  
</div>
`;

exports[`SettingsAllowedIPsOverview > renders correctly if allowedIPs is empty 1`] = `
<div
  class="d-flex flex-column align-center full-width mt-10"
>
  
  <v-card-stub
    border="false"
    class=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    maxwidth="900px"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
    width="100%"
  >
    
    <v-card-title-stub
      class="d-flex justify-center align-center"
      tag="div"
    >
      Allowed IPs 
      
      
    </v-card-title-stub>
    <!--v-if-->
    
    <empty-view-stub
      description="No IPs added, all connections are allowed."
      descriptionrows=""
      header=""
      imgurl="allowed-ips"
      imgwidth=""
      primarybtn=""
      primarybtnicon=""
      secondarybtn="IP address"
      secondarybtncolor="primary"
      secondarybtnicon="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      secondarybtntype="primary"
      small="false"
      tertiarybtn=""
      tertiarybtnicon=""
    />
    <!--v-if-->
    <v-card-actions-stub
      tag="div"
    >
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <!--v-if-->
    </v-card-actions-stub>
    
    
  </v-card-stub>
  
</div>
`;
